--- a/work.html
+++ b/work.html
@@ -76,7 +76,7 @@
                 </nav>
             </section>
 
-            <section class="design">
+            <section class="design" id="design">
                 <div>
                     <h3>design</h3>
                 </div>
@@ -182,7 +182,7 @@
             </section>
 
 
-            <section class="photograph">
+            <section class="photograph" id="photograph">
                 <div>
                     <h3>photograph</h3>
                 </div>
