--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="main_contents_sp">
                     <p class="fadeIn2s">Welcome to Web Designer </p>
                     <h2 class="fadeIn2500ms">PORTFOLIO<br />DESIGN</h2>
-                    <div class="main_contents01_sp fadeIn2500ms">
+                    <!-- <div class="main_contents01_sp fadeIn2500ms">
                         <svg class="circleText" viewBox="0 0 100 100">
                             <path d="M 0,50 a 50,50 0 1,1 0,1 z" id="circle" />
                             <text>
@@ -110,7 +110,7 @@
                                 </textPath>
                             </text>
                         </svg>
-                    </div>
+                    </div> -->
                     <div>
                         <h1 class="name01_sp text transx" data-char-span data-text-animation="fadeIn">Mao</h1>
                     </div>
