--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                         class="about_contents_img">
                                 </picture>
                                 <div class="about_text">
-                                    <p class="about_name box fadeIn">大喜田　真生- Mao</p>
+                                    <p class="about_name box fadeIn">おおきた　まお- Mao</p>
                                     <p class="about_text_detail box fadeIn">1998年、香川県生まれ。<br>
                                         デザインし制作した物を通じて、お客様一人ひとりの未来を一緒に作りたい。<br>
                                         お客様の夢や想いを、丁寧にヒアリングしそれを基に精一杯の愛情を持ってコンテンツを制作いたします。
