--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                     </div>
                     <div>
                         <div class="profile_box">
-                            <p class="profile_name box fadeIn">大喜田　真生-Mao Okita</p>
+                            <p class="profile_name box fadeIn">おおきた　まお-Mao Okita</p>
                             <p class="profile_text box fadeIn">自然豊かな香川県で生まれました。小さい頃から海と山が大好きでした。<br>
                                 普段は病院で作業療法士というリハビリのお仕事をしています。
                                 作業療法士もとてもやりがいのあるお仕事ですが、ずっと興味のあったデザインでたくさん方の夢を叶えるお手伝いをしたいと思い勉強を始めました。
