--- a/work/work_d2.html
+++ b/work/work_d2.html
@@ -79,7 +79,7 @@
                     <dt>カテゴリー</dt>
                     <dd>ランディングページ</dd>
                     <dt>制作範囲</dt>
-                    <dd>デザイン（トレース）</dd>
+                    <dd>デザイン</dd>
                     <dt>制作期間</dt>
                     <dd>1週間</dd>
                     <dt>制作ツール</dt>
