--- a/work/work_d3.html
+++ b/work/work_d3.html
@@ -85,7 +85,7 @@
                     <dt>制作ツール</dt>
                     <dd>HTML/CSS/jQuery</dd>
                     <dt>制作のポイント</dt>
-                    <dd>スクールの課題として、デザインカンプを基にHTML / CSS / Javascript /
+                    <dd>デザインカンプを基にHTML / CSS / Javascript /
                         jQueryを使用し、コーディングを行いました。jQueryを用いて、メインビジュアルやギャラリーのスライダー、スマホ版のハンバーガーメニューに動きを実装しています。</dd>
                 </dl>
 
