--- a/work/work_d6.html
+++ b/work/work_d6.html
@@ -79,7 +79,7 @@
                     <dt>カテゴリー</dt>
                     <dd>バナー広告</dd>
                     <dt>制作範囲</dt>
-                    <dd>デザイン（トレース）</dd>
+                    <dd>デザイン</dd>
                     <dt>制作期間</dt>
                     <dd>3日間</dd>
                     <dt>制作ツール</dt>
